# roo-compiler

./: .gitignore  Common.hs  Makefile  Oz.hs  README.md  Roo.hs  RooAnalyse.hs  RooAst.hs  RooCompile.hs  RooParser.hs  RooPreprocessor.hs  RooPrettyPrinter.hs  SymTable.hs  roo.cabal  test.sh
array-tests/: int-array.roo  locals-refs.roo  rec-arr.roo  scopes-arr.roo
lib/: bits.roo  hof.roo  math.roo  random.roo
oz/: Makefile  README.md  README.txt  oz  oz.c
oz/test/: overflow.oz
test/: aggr01.roo  aggr02.roo  aggr03.roo  arr-elem-assign.roo  array.roo  arrayprod.roo  asg.roo  asg01.roo  bell.roo  call-ref.roo  comp-expr.roo  decimal.roo  decimal2.roo  expr-bad.roo  expr.roo  expr1.roo  exprs.roo  func.roo  gcd.roo  hail.roo  hello.roo  hof-lib.roo  hof.roo  include.roo  infinite.roo  io.roo  io01.roo  io02.roo  lambda.roo  linalg.roo  main.roo  mile1.roo  mile2.roo  mile3.roo  mile4.roo  mile5.roo  mile6.roo  mile7.roo  mile8.roo  mod.roo  (+25 more)
