cabal-version:       >=1.10
name:                Roo
version:             0.1.0.0
license-file:        LICENSE
author:              Eleanor McMurtry & Jenny Yan
build-type:          Simple
extra-source-files:  README.md

executable Roo
  main-is:             Roo.hs
  other-modules:       Common, Oz, RooAnalyse, RooAst, RooCompile, RooParser, RooPrettyPrinter, SymTable
  build-depends:       base >=4.14, mtl, rainbow, pretty-simple, parsec, text, containers, directory
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-name-shadowing -fno-warn-unused-do-bind